--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@ body{
   margin:0;
   background:radial-gradient(circle at top,#0b1440,#050814);
   font-family:system-ui;
-  color:#fff;
+  color:white;
 }
 
 header{
