--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   --bg:#050814;
   --panel:rgba(22,30,60,.85);
   --glass:rgba(255,255,255,.08);
-  --accent:#70f3ff;
+  --accent:#FFFFFF;
   --accent2:#a16bff;
   --danger:#ff5c6c;
 }
