--- a/index.html
+++ b/index.html
@@ -214,6 +214,8 @@ score.staffs.forEach((staff,idx)=>{
   /* NOTES */
   staff.notes.forEach(n=>{
     ctx.font="62px serif";
+    ctx.strokeStyle = "#ffffff";
+    ctx.fillStyle   = "#ffffff";
     ctx.textAlign="center";
     ctx.textBaseline="middle";
     ctx.fillText(n.s,n.x,n.y);
